--- a/ConsoleApp-FileChange/ConsoleApp-FileChange.csproj
+++ b/ConsoleApp-FileChange/ConsoleApp-FileChange.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspose.PDF" Version="22.12.0" />
+    <PackageReference Include="Aspose.Words" Version="22.12.0" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.18.0" />
   </ItemGroup>
 
